--- a/NanumMyeongjoEco.css
+++ b/NanumMyeongjoEco.css
@@ -2,17 +2,23 @@
     font-family: 'Nanum Myeongjo Eco';
     font-weight: 400;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/NanumMyeongjoEco/NanumMyeongjoEco.otf');
+    font-display: swap;
+    src: url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEco.otf') format('opentype'),
+         url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEco.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Nanum Myeongjo Eco';
     font-weight: 700;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/NanumMyeongjoEco/NanumMyeongjoEcoBold.otf');
+    font-display: swap;
+    src: url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEcoBold.otf') format('opentype'),
+         url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEcoBold.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Nanum Myeongjo Eco';
     font-weight: 800;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/fonts-archive/NanumMyeongjoEco/NanumMyeongjoEcoExtraBold.otf');
+    font-display: swap;
+    src: url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEcoExtraBold.otf') format('opentype'),
+         url('https://cdn.statically.io/gh/fonts-archive/NanumMyeongjoEco/main/NanumMyeongjoEcoExtraBold.ttf') format('truetype');
 }
